sandbox-codebase/objects/heymarket__Sync_Object__c/heymarket__Sync_Object__c.object-meta.xml
<CustomObject>
    <description>Sync object will store the configuration per Object which will be synced between Salesforce and HM. This object will support multiple different objects to participate in sync with HM, with different sync configs suitable as per the nature of the object. The plan is to support Contact, Lead, Person Account and Custom Objects in future releases. This object will lay the correct foundation for the extension planned.</description>
    <label>Sync Object</label>
    <nameField>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sync Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>