sandbox-codebase/objects/heymarket__Sync_Object__c/fields/heymarket__Enable_Native_Template__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Enable_Native_Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Native Template</label>
    <type>Checkbox</type>
</CustomField>