sandbox-codebase/objects/heymarket__Sync_Object__c/fields/heymarket__On_SF_Record_Delete__c.field-meta.xml
<CustomField>
    <fullName>heymarket__On_SF_Record_Delete__c</fullName>
    <description>when salesforce record is deleted</description>
    <label>On SF Record Delete</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delete HM record</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>