sandbox-codebase/objects/heymarket__Sync_Object__c/fields/heymarket__Sync_Listview_ID__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Sync_Listview_ID__c</fullName>
    <description>ID of list view whose contacts should be synced only. If this field is blank all contacts/leads will be synced.</description>
    <inlineHelpText>ID of list view whose contacts should be synced only. If this field is blank all contacts/leads will be synced.</inlineHelpText>
    <label>Sync Listview ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>