sandbox-codebase/objects/heymarket__Sync_Object__c/fields/heymarket__Sync_Record_Owner__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Sync_Record_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Record Owner</label>
    <type>Checkbox</type>
</CustomField>